[gd_scene load_steps=54 format=2]

[ext_resource path="res://Prototype/Buzzes/Buzz.gd" type="Script" id=1]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0017_Antannae5.png" type="Texture" id=2]
[ext_resource path="res://Prototype/fonts/FontBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://Prototype/fonts/FontNormal.tres" type="DynamicFont" id=4]
[ext_resource path="res://Prototype/BZL_Default_Theme.tres" type="Theme" id=5]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0009_Stripes3.png" type="Texture" id=6]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0012_Stinger4.png" type="Texture" id=7]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0007_Stripes5.png" type="Texture" id=8]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0008_Stripes4.png" type="Texture" id=9]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0001_AngryEyes.png" type="Texture" id=10]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0003_OldEyes.png" type="Texture" id=11]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0015_Stinger1.png" type="Texture" id=12]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0016_Antannae6.png" type="Texture" id=13]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0013_Stinger3.png" type="Texture" id=14]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0014_Stinger2.png" type="Texture" id=15]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0010_Stripes2.png" type="Texture" id=16]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0000_Wings1.png" type="Texture" id=17]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0020_Antannae2.png" type="Texture" id=18]
[ext_resource path="res://Prototype/Avatar.gd" type="Script" id=19]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0005_DefaultEyes.png" type="Texture" id=20]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0021_Antennae1.png" type="Texture" id=21]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0002_PrettyEyes.png" type="Texture" id=22]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0006_Stripes6.png" type="Texture" id=23]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0022_BASE.png" type="Texture" id=24]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0018_Antannae4.png" type="Texture" id=25]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0011_Stripes1.png" type="Texture" id=26]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0019_Antannae3.png" type="Texture" id=27]
[ext_resource path="res://images/BZLAVATAR/BzLModularAvatar_0004_NervousEyes.png" type="Texture" id=28]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.454902, 0.454902, 0.454902, 0 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 24 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 23 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 27 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=26]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 1600, 1600 )

[node name="Buzz" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 5 )

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 225 )
mouse_filter = 1
size_flags_horizontal = 3
theme = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer"]
margin_right = 100.0
margin_bottom = 225.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 1
theme = ExtResource( 5 )

[node name="Panel" type="Panel" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 0
theme = ExtResource( 5 )

[node name="AvatarHolder" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 19 )

[node name="Base" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder"]
margin_right = 100.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
custom_styles/panel = SubResource( 6 )

[node name="Eyes" type="Control" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder"]
margin_right = 100.0
margin_bottom = 100.0

[node name="Eyes" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Eyes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 7 )

[node name="Eyes2" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Eyes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 8 )

[node name="Eyes3" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Eyes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 9 )

[node name="Eyes4" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Eyes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 10 )

[node name="Eyes5" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Eyes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )

[node name="Stripes" type="Control" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder"]
margin_right = 100.0
margin_bottom = 100.0

[node name="Stripes1" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 12 )

[node name="Stripes2" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 13 )

[node name="Stripes3" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 14 )

[node name="Stripes4" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 15 )

[node name="Stripes5" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 16 )

[node name="Stripes6" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Stripes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 17 )

[node name="Antannae" type="Control" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder"]
margin_right = 100.0
margin_bottom = 100.0

[node name="Antannae1" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 18 )

[node name="Antannae2" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 19 )

[node name="Antannae3" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 20 )

[node name="Antannae4" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 21 )

[node name="Antannae5" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 22 )

[node name="Antannae6" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Antannae"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 23 )

[node name="Stinger" type="Control" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder"]
margin_right = 100.0
margin_bottom = 100.0

[node name="Stinger1" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Stinger"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 24 )

[node name="Stinger2" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Stinger"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 25 )

[node name="Stinger3" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Stinger"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 26 )

[node name="Stinger4" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Stinger"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 27 )

[node name="Wings" type="Control" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder"]
margin_right = 100.0
margin_bottom = 100.0

[node name="Wings1" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer/Panel/AvatarHolder/Wings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 29 )

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer"]
margin_left = 104.0
margin_right = 906.0
margin_bottom = 225.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2"]
margin_right = 802.0
margin_bottom = 225.0
theme = ExtResource( 5 )

[node name="Username" type="Label" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 802.0
margin_bottom = 18.0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Username"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 22.0
margin_right = 802.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 15 )
mouse_filter = 1
theme = ExtResource( 5 )

[node name="BuzzText" type="Label" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 41.0
margin_right = 802.0
margin_bottom = 80.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = ExtResource( 4 )
text = "lorem ipsum dolor sit amet consectetut adispciscin elit. Nunc enim, portitor interdum gravida quis. Nunc velt nunc, felis mi partiurient enim. adispicing at socils amet lectus tortor augue interdum."
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 84.0
margin_right = 802.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 1
theme = ExtResource( 5 )

[node name="BuzzTest2" type="HBoxContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 118.0
margin_right = 802.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
theme = ExtResource( 5 )

[node name="Keyword1" type="Label" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/BuzzTest2"]
margin_top = 6.0
margin_bottom = 24.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.74902, 0, 0.541176, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/BuzzTest2"]
margin_left = 4.0
margin_right = 19.0
margin_bottom = 30.0
rect_min_size = Vector2( 15, 0 )
theme = ExtResource( 5 )

[node name="Keyword2" type="Label" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/BuzzTest2"]
margin_left = 23.0
margin_top = 6.0
margin_right = 23.0
margin_bottom = 24.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.74902, 0, 0.541176, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/BuzzTest2"]
margin_left = 27.0
margin_right = 42.0
margin_bottom = 30.0
rect_min_size = Vector2( 15, 0 )
theme = ExtResource( 5 )

[node name="Keyword3" type="Label" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/BuzzTest2"]
margin_left = 46.0
margin_top = 6.0
margin_right = 46.0
margin_bottom = 24.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.74902, 0, 0.541176, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/BuzzTest2"]
margin_left = 50.0
margin_right = 65.0
margin_bottom = 30.0
rect_min_size = Vector2( 15, 0 )
theme = ExtResource( 5 )

[node name="Keyword4" type="Label" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/BuzzTest2"]
margin_left = 69.0
margin_top = 6.0
margin_right = 69.0
margin_bottom = 24.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.74902, 0, 0.541176, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/BuzzTest2"]
margin_left = 73.0
margin_right = 88.0
margin_bottom = 30.0
rect_min_size = Vector2( 15, 0 )
theme = ExtResource( 5 )

[node name="Keyword5" type="Label" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/BuzzTest2"]
margin_left = 92.0
margin_top = 6.0
margin_right = 92.0
margin_bottom = 24.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.74902, 0, 0.541176, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/BuzzTest2"]
margin_left = 96.0
margin_right = 111.0
margin_bottom = 30.0
rect_min_size = Vector2( 15, 0 )
theme = ExtResource( 5 )

[node name="Keyword6" type="Label" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/BuzzTest2"]
margin_left = 115.0
margin_top = 6.0
margin_right = 115.0
margin_bottom = 24.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.74902, 0, 0.541176, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 152.0
margin_right = 802.0
margin_bottom = 182.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 1
theme = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 186.0
margin_right = 802.0
margin_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="Comments" type="Button" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_right = 157.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
text = "Comments"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 25.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="BuzzBack" type="Button" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_left = 322.0
margin_right = 479.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Leave a Comment"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_left = 483.0
margin_right = 640.0
margin_bottom = 25.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="ExtendButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_left = 644.0
margin_right = 802.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Boost"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 215.0
margin_right = 802.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 10 )

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/Panel/HBoxContainer"]
margin_left = 910.0
margin_right = 1024.0
margin_bottom = 225.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 5 )

[node name="TimeRemaining" type="Label" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer3"]
margin_top = 103.0
margin_right = 114.0
margin_bottom = 121.0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Time Remaining:"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="VBoxContainer/Panel/HBoxContainer/PanelContainer3/TimeRemaining"]
autostart = true

[node name="CommentsSection" type="ScrollContainer" parent="VBoxContainer"]
visible = false
margin_top = 229.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CommentsSection"]
margin_right = 1024.0
margin_bottom = 371.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="LeaveAComment" type="WindowDialog" parent="VBoxContainer/CommentsSection/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 5 )
window_title = "Leave a Comment"

[node name="CommentTextEntry" type="LineEdit" parent="VBoxContainer/CommentsSection/VBoxContainer/LeaveAComment"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
placeholder_text = "Write your Comment Here"
caret_blink = true
caret_blink_speed = 0.5

[node name="Submit" type="Button" parent="VBoxContainer/CommentsSection/VBoxContainer/LeaveAComment"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -101.0
margin_top = 30.0
margin_bottom = 60.0
theme = ExtResource( 5 )
text = "Submit"

[node name="Cancel" type="Button" parent="VBoxContainer/CommentsSection/VBoxContainer/LeaveAComment"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -202.0
margin_top = 30.0
margin_right = -102.0
margin_bottom = 60.0
theme = ExtResource( 5 )
text = "Cancel"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 2
theme = ExtResource( 5 )

[node name="Keyword1" type="Label" parent="."]
visible = false
margin_top = 293.0
margin_right = 1024.0
margin_bottom = 307.0
theme = ExtResource( 5 )
align = 1
valign = 1

[node name="Keyword2" type="Label" parent="."]
visible = false
margin_top = 293.0
margin_right = 1024.0
margin_bottom = 307.0
theme = ExtResource( 5 )
align = 1
valign = 1

[node name="Keyword3" type="Label" parent="."]
visible = false
margin_top = 293.0
margin_right = 1024.0
margin_bottom = 307.0
theme = ExtResource( 5 )
align = 1
valign = 1

[node name="Keyword4" type="Label" parent="."]
visible = false
margin_top = 293.0
margin_right = 1024.0
margin_bottom = 307.0
theme = ExtResource( 5 )
align = 1
valign = 1

[node name="Keyword5" type="Label" parent="."]
visible = false
margin_top = 293.0
margin_right = 1024.0
margin_bottom = 307.0
theme = ExtResource( 5 )
align = 1
valign = 1

[node name="Keyword6" type="Label" parent="."]
visible = false
margin_top = 293.0
margin_right = 1024.0
margin_bottom = 307.0
theme = ExtResource( 5 )
align = 1
valign = 1

[connection signal="toggled" from="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/Comments" to="." method="_on_Comments_toggled"]
[connection signal="pressed" from="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/BuzzBack" to="." method="_on_BuzzBack_pressed"]
[connection signal="pressed" from="VBoxContainer/Panel/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/ExtendButton" to="." method="_on_ExtendButton_pressed"]
[connection signal="timeout" from="VBoxContainer/Panel/HBoxContainer/PanelContainer3/TimeRemaining/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="VBoxContainer/CommentsSection/VBoxContainer/LeaveAComment/Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="VBoxContainer/CommentsSection/VBoxContainer/LeaveAComment/Cancel" to="." method="_on_Cancel_pressed"]
